--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.202",
+    "@types/lodash.debounce": "^4.0.9",
     "framer-motion": "^10.17.9",
+    "lodash.debounce": "^4.0.8",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
