--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/lodash": "^4.14.202",
-    "@types/lodash.debounce": "^4.0.9",
     "framer-motion": "^10.17.9",
     "lodash.debounce": "^4.0.8",
     "next": "14.0.4",
@@ -29,6 +27,8 @@
     "prettier": "^3.1.1",
     "prettier-plugin-tailwindcss": "^0.5.10",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@types/lodash": "^4.14.202",
+    "@types/lodash.debounce": "^4.0.9"
   }
 }
